@@ -10,6 +10,7 @@
 ## Improvements
 ##
 
+- Alias Devices: Show a warning in case the user specifically listed a device to use which in a later step is skipped because it is an alias of another active device
 - Backend Information: Added new column showing the PCI Address per CUDA/OpenCL device to easier identify broken cards
 
 * changes v6.2.1 -> v6.2.2
